--- a/style.css
+++ b/style.css
@@ -5,9 +5,14 @@
 }
 
 body{
-  background-color: beige;
+  background-color: #66545E;
+  font-family:Arial, Helvetica, sans-serif;
+  text-align: center;
 }
 
+h1{
+  margin: 20px;
+}
 .container{
   width: 800px;
   margin: 20px auto;
@@ -25,7 +30,14 @@ body{
   border: 1px solid black;
 }
 
-.orange{
-  background-color: orange;
+.rose{
+  background-color: #AA6F73;
 }
 
+.orange{
+  background-color: #EEA990;
+}
+
+.yellow{
+  background-color: #F6E0B5;
+}
